<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context="com.projet.nsv.nsvapp.activity.SplashScreenActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/img_splash_logo" />

        <RelativeLayout
            android:id="@+id/relLay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/signin_title"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLogin"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/username_tv"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/etUserNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/username_hint_input"
                        android:inputType=""
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size"
                        tools:targetApi="o" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/password_tv"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/etPasswordInput"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/password_hint_input"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/tvInfoUser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/displayed_data_user"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:text="@string/signin_button"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:text="@string/login_button"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/relLay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

    <Button
        style="@style/saveInfoButton"
        android:onClick="saveInfo"
        android:text="@string/save_user_info_button" />

    <Button
        android:id="@+id/displayData"
        style="@style/displayDataButton"
        android:onClick="displayData"
        android:text="@string/display_user_data_button" />

    </RelativeLayout>

</RelativeLayout>
