<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/icon_layout">


<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/gradStart"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_receipeImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:background="@drawable/img_bg"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#88000000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </View>

        <LinearLayout
            android:id="@+id/receipe_parent_llayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_receipeImage">

            <TextView
                android:id="@+id/tv_receipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="This is our receipe title, you can check that."
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RatingBar
                    android:id="@+id/rating"
                    style="@style/customRatingBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numStars="5"
                    android:rating="3.5"
                    android:stepSize="0.5" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/constraint_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#F5F5F5"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/prepa_element"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/cook_element"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/icon_preparation"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                app:srcCompat="@drawable/preparation" />

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/icon_preparation"
                android:text="Preparation"
                android:textSize="16dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_preparation_time"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/icon_preparation"
                android:text="15 min"
                android:textSize="16dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cook_element"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/calorie_element"
            app:layout_constraintStart_toEndOf="@+id/prepa_element">

            <ImageView
                android:id="@+id/icon_cook_time"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                app:srcCompat="@drawable/cooktime" />

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/icon_cook_time"
                android:text="Cook Time"
                android:textSize="16dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_cook_time"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/icon_cook_time"
                android:text="40 min"
                android:textSize="16dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/calorie_element"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cook_element">

            <ImageView
                android:id="@+id/icon_calories"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                app:srcCompat="@drawable/calories" />

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/icon_calories"
                android:text="@string/calories_title"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/icon_calories"
                android:text="298 kcal"
                android:textSize="16sp"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:layout_below="@+id/icon_layout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp">

                <TextView
                    android:id="@+id/tv_ingredients_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/ingredients_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_ingredients_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="@+id/tv_ingredients_title"
                    android:layout_marginTop="40dp"
                    android:padding="20dp"
                    android:text="Et interdum acciderat, ut siquid in penetrali secreto nullo citerioris vitae ministro praesente paterfamilias uxori susurrasset in aurem, velut Amphiarao referente aut Marcio, quondam vatibus inclitis, postridie disceret imperator. ideoque etiam parietes arcanorum soli conscii timebantur. Et interdum acciderat, ut siquid in penetrali secreto nullo citerioris vitae ministro praesente paterfamilias uxori susurrasset in aurem, velut Amphiarao referente aut Marcio, quondam vatibus inclitis, postridie disceret imperator. ideoque etiam parietes arcanorum soli conscii timebantur." />

                <TextView
                    android:id="@+id/tv_instruction_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_ingredients_list"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:padding="10dp"
                    android:text="@string/instructions_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_instructions_list"
                    android:layout_width="409dp"
                    android:layout_height="221dp"
                    android:layout_below="@+id/tv_instruction_title"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:padding="20dp"
                    android:text="Et interdum acciderat, ut siquid in penetrali secreto nullo citerioris vitae ministro praesente paterfamilias uxori susurrasset in aurem, velut Amphiarao referente aut Marcio, quondam vatibus inclitis, postridie disceret imperator. ideoque etiam parietes arcanorum soli conscii timebantur. Et interdum acciderat, ut siquid in penetrali secreto nullo citerioris vitae ministro praesente paterfamilias uxori susurrasset in aurem, velut Amphiarao referente aut Marcio, quondam vatibus inclitis, postridie disceret imperator. ideoque etiam parietes arcanorum soli conscii timebantur." />

        </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:startColor="@android:color/transparent"
        />

    </RelativeLayout>



</androidx.core.widget.NestedScrollView>





